force-app/main/default/objects/LAD_MDC_Preference__c/LAD_MDC_Preference__c.object-meta.xml
<CustomObject>
    <description>Transactional / Setup Object
- Will be used to store the MDC selected for given Product, in order to
reflect it later on Cart Item
- Introduction of this Object will allow to leverage OOTBfunctionalitiesof
B2B Commerce
- Recordsof this object will be created automatically, won&apos;t have any
impact on External or Internal Users experience
- After journey is finalized - the records will be automatically removed
from the system, as they&apos;ll be no longer needed</description>
    <label>MDC Preference</label>
    <nameField>
        <displayFormat>MDC-{0000}</displayFormat>
        <label>MDC Pre Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Preference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>