force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MDC Preference</relationshipLabel>
    <relationshipName>MDC_Preference_Account</relationshipName>
    <type>Lookup</type>
</CustomField>