force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_Associated_Location__c.field-meta.xml
<CustomField>
    <fullName>LAD_Associated_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Location</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>MDC Preference</relationshipLabel>
    <relationshipName>MDC_Preference_AssociatedLocation</relationshipName>
    <type>Lookup</type>
</CustomField>