force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_Cartitem__c.field-meta.xml
<CustomField>
    <fullName>LAD_Cartitem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CartItem</label>
    <referenceTo>CartItem</referenceTo>
    <relationshipLabel>MDC Preference</relationshipLabel>
    <relationshipName>MDC_Preference</relationshipName>
    <type>Lookup</type>
</CustomField>