force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>