force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MDC Preference</relationshipLabel>
    <relationshipName>MDC_Preference_Product</relationshipName>
    <type>Lookup</type>
</CustomField>