force-app/main/default/objects/LAD_MDC_Preference__c/fields/LAD_User__c.field-meta.xml
<CustomField>
    <fullName>LAD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MDC_Preference</relationshipName>
    <type>Lookup</type>
</CustomField>